add in smooth scroll to navbar

--- a/scss/dependencies/contact.scss
+++ b/scss/dependencies/contact.scss
@@ -67,6 +67,7 @@
 #contact {
   max-height:616px;
   background:url('../images/map-full.png');
+  background-size:cover;
 }
 
 .device-xs #contact, .device-xxs #contact {
