--- a/scss/dependencies/reviews.scss
+++ b/scss/dependencies/reviews.scss
@@ -7,6 +7,7 @@
   padding:50px 0;
   background-image:url('../images/reviews-bg.jpg');
   background-size:cover;
+  background-attachment: fixed;
 }
 
 .bf-spn {
