--- a/scss/dependencies/contact.scss
+++ b/scss/dependencies/contact.scss
@@ -66,7 +66,7 @@
 
 #contact {
   max-height:616px;
-  background:url('../images/map-full.png');
+  background:url('../images/google-map-full.png');
   background-size:cover;
 }
 
