--- a/css/main.css
+++ b/css/main.css
@@ -26528,6 +26528,9 @@ h4.modal-title {
 .device-md #slide-1, .device-sm #slide-1 {
   background-position-x: 25%; }
 
+.device-md #slide-2, .device-sm #slide-2 {
+  background-position-x: 66% !important; }
+
 #meet-the-doctor h3 {
   font-size: 32px;
   font-weight: 700;
@@ -26655,14 +26658,14 @@ h4.modal-title {
 
 .bf-spn {
   color: #FFF;
-  font-size: 16px !important;
+  font-size: 14px !important;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400; }
 
 .bf-pro {
   color: #FFF !important;
-  font-size: 16px;
+  font-size: 14px !important;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400; }
