--- a/css/main.css
+++ b/css/main.css
@@ -26962,6 +26962,16 @@ div.modal-body > div.img-wrap.hidden-xs.hidden-sm {
   top: -60px;
   position: relative; }
 
+.device-lg #contact .container, .device-md #contact .container {
+  margin-right: 0; }
+
+.device-lg #contact #contact-form-overlay-mini, .device-md #contact #contact-form-overlay-mini {
+  position: absolute;
+  right: 0; }
+
+.device-lg .vertical-middle, .device-md .vertical-middle {
+  top: 0% !important; }
+
 body {
   font-family: "Lato", sans-serif; }
 
