add opaque background to contact overlay

--- a/css/main.css
+++ b/css/main.css
@@ -26967,10 +26967,14 @@ div.modal-body > div.img-wrap.hidden-xs.hidden-sm {
 
 .device-lg #contact #contact-form-overlay-mini, .device-md #contact #contact-form-overlay-mini {
   position: absolute;
-  right: 0; }
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.85); }
 
 .device-lg .vertical-middle, .device-md .vertical-middle {
   top: 0% !important; }
+
+.device-sm #contact #contact-form-overlay-mini {
+  background-color: rgba(255, 255, 255, 0.85); }
 
 body {
   font-family: "Lato", sans-serif; }
