change responsiveness for slides

--- a/css/main.css
+++ b/css/main.css
@@ -26531,6 +26531,12 @@ h4.modal-title {
 .device-md #slide-2, .device-sm #slide-2 {
   background-position-x: 66% !important; }
 
+.device-xs #slide-3 .slider-caption {
+  left: -10%; }
+
+.device-xs #slide-1 > div > div {
+  left: -10%; }
+
 #meet-the-doctor h3 {
   font-size: 32px;
   font-weight: 700;
