change carousel for mobile for services

--- a/scss/dependencies/phone-slug.scss
+++ b/scss/dependencies/phone-slug.scss
@@ -126,3 +126,8 @@ $phone-color: #FFF;
 .device-xs #specials-below .old-hotline a, .device-xxs #specials-below .old-hotline a {
   font-size:21px;
 }
+
+.phone-slug .button {
+  padding-left:25px;
+  padding-right:25px;
+}
