--- a/css/main.css
+++ b/css/main.css
@@ -25959,6 +25959,10 @@ a.social-icon.si-colored {
 .device-xs #specials-below .old-hotline a, .device-xxs #specials-below .old-hotline a {
   font-size: 21px; }
 
+.phone-slug .button {
+  padding-left: 25px;
+  padding-right: 25px; }
+
 /** Contact Modal **/
 .form-error {
   color: #D56724;
@@ -25992,6 +25996,12 @@ h4.modal-title {
 #contact-modal .modal-dialog {
   background: #FFF;
   border-radius: 5px; }
+
+input[type='text'],
+input[type='email'],
+input[type='phone'],
+textarea, .form-control {
+  font-size: 16px; }
 
 /** SPECIALS **/
 .section-specials {
@@ -26864,6 +26874,10 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
 .wrap-services {
   position: absolute;
   bottom: 0; }
+
+@media (max-width: 320px) {
+  .portfolio-full.portfolio-notitle .portfolio-desc, .portfolio-nomargin.portfolio-notitle .portfolio-desc, #related-portfolio .portfolio-desc {
+    bottom: inherit !important; } }
 
 /* Service Modals */
 #services a:hover {
