--- a/scss/dependencies/contact-modal.scss
+++ b/scss/dependencies/contact-modal.scss
@@ -36,3 +36,10 @@ h4.modal-title {
   background:#FFF;
   border-radius:5px;
 }
+
+input[type='text'],
+input[type='email'],
+input[type='phone'],
+textarea, .form-control {
+  font-size: 16px;
+}
