--- a/scss/dependencies/specials-below.scss
+++ b/scss/dependencies/specials-below.scss
@@ -35,3 +35,7 @@
 #specials-below .tleft {
   margin-top:12px;
 }
+
+#specials-below .new-hotline a:hover, #specials-below .old-hotline a:hover {
+  text-decoration:none !important;
+}
