--- a/css/main.css
+++ b/css/main.css
@@ -25963,6 +25963,9 @@ a.social-icon.si-colored {
   padding-left: 25px;
   padding-right: 25px; }
 
+.phone-slug .new-hotline a:hover, .phone-slug .old-hotline a:hover {
+  text-decoration: none !important; }
+
 /** Contact Modal **/
 .form-error {
   color: #D56724;
@@ -26662,6 +26665,9 @@ textarea, .form-control {
 #specials-below .tleft {
   margin-top: 12px; }
 
+#specials-below .new-hotline a:hover, #specials-below .old-hotline a:hover {
+  text-decoration: none !important; }
+
 #reviews h3 {
   color: #F2D55A;
   font-weight: 700; }
@@ -26879,6 +26885,55 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
   .portfolio-full.portfolio-notitle .portfolio-desc, .portfolio-nomargin.portfolio-notitle .portfolio-desc, #related-portfolio .portfolio-desc {
     bottom: 5px !important; } }
 
+#services-carousel .owl-item {
+  margin: 0 auto;
+  display: inline-block;
+  position: relative; }
+  #services-carousel .owl-item:hover:after {
+    content: "+";
+    position: absolute;
+    top: 50%;
+    color: white;
+    font-size: 60px;
+    left: 50%;
+    margin-left: -17px;
+    margin-top: -45px;
+    z-index: 11; }
+  #services-carousel .owl-item:hover:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.37); }
+
+#services-carousel .floating-owl-title {
+  text-align: center;
+  margin-bottom: 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #FFF6CD;
+  font-weight: 900;
+  font-family: 'Lato', sans-serif; }
+
+#services-carousel .owl-carousel .owl-nav .owl-next {
+  right: 18px !important; }
+
+#services-carousel .owl-carousel .owl-nav .owl-prev {
+  left: 18px !important; }
+
+#services-carousel [class^="icon-"] {
+  color: #FFF;
+  font-weight: 400 !important;
+  top: 7px; }
+
+#services-carousel {
+  border-bottom: 3px solid #FFDE86; }
+
 /* Service Modals */
 #services a:hover {
   text-decoration: none; }
@@ -26995,6 +27050,9 @@ div.modal-body > div.img-wrap.hidden-xs.hidden-sm {
 
 .device-sm #contact #contact-form-overlay-mini {
   background-color: rgba(255, 255, 255, 0.85); }
+
+.p-5 a:hover, .p-7 a:hover {
+  text-decoration: none !important; }
 
 body {
   font-family: "Lato", sans-serif; }
