--- a/scss/dependencies/contact.scss
+++ b/scss/dependencies/contact.scss
@@ -97,3 +97,8 @@
 .device-sm #contact #contact-form-overlay-mini {
   background-color:rgba(255, 255, 255, .85);
 }
+
+
+.p-5 a:hover, .p-7 a:hover {
+  text-decoration:none !important;
+}
