--- a/scss/dependencies/services.scss
+++ b/scss/dependencies/services.scss
@@ -156,3 +156,68 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
     bottom:5px !important;
   }
 }
+
+
+@mixin hover-plus() {
+  margin: 0 auto;
+  display: inline-block;
+  position: relative;
+  &:hover:after {
+    content: "+";
+    position: absolute;
+    top: 50%;
+    color: white;
+    font-size: 60px;
+    left: 50%;
+    margin-left: -17px;
+    margin-top: -45px;
+    z-index: 11;
+  }
+  &:hover:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.37);
+  }
+}
+
+#services-carousel {
+  .owl-item {
+    @include hover-plus;
+  }
+  .floating-owl-title {
+    text-align: center;
+    margin-bottom: 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    color: #FFF6CD;
+    font-weight: 900;
+    font-family: 'Lato', sans-serif;
+  }
+}
+
+#services-carousel .owl-carousel .owl-nav .owl-next {
+  right:18px !important;
+
+}
+
+#services-carousel .owl-carousel .owl-nav .owl-prev {
+  left:18px !important;
+}
+
+#services-carousel [class^="icon-"] {
+  color:#FFF;
+  font-weight:400 !important;
+  top:7px;
+
+}
+
+#services-carousel {
+  border-bottom:3px solid #FFDE86;
+}
