--- a/scss/dependencies/meet-the-doctor.scss
+++ b/scss/dependencies/meet-the-doctor.scss
@@ -58,8 +58,9 @@
 #meet-the-doctor-mobile p {
   /* By combining advance: */
   font-family: "Open Sans", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: #312400;
+  line-height:22px;
 }
 
 .device-xs #meet-the-doctor-mobile img, .device-xxs #meet-the-doctor-mobile img {
