--- a/scss/dependencies/specials.scss
+++ b/scss/dependencies/specials.scss
@@ -34,11 +34,11 @@ $p-color: red;
 }
 
 .specials-3 {
-  color: $specials-3-color;
+  color: #E87500;
   background:#E87500;
 }
 .specials-3.specials-circle {
-  background: $specials-3-color;
+  background: #E87500;
 }
 .specials-row h5 {
   font-size:36px;
