adjust h3 text in services

--- a/css/main.css
+++ b/css/main.css
@@ -27026,6 +27026,10 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
 #services-carousel {
   border-bottom: 3px solid #FFDE86; }
 
+.device-md #services h3, .device-lg #services h3 {
+  color: #000;
+  text-shadow: 0 2px 4px rgba(255, 255, 255, 0.5); }
+
 /* Service Modals */
 #services a:hover {
   text-decoration: none; }
