--- a/scss/dependencies/services.scss
+++ b/scss/dependencies/services.scss
@@ -221,3 +221,12 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
 #services-carousel {
   border-bottom:3px solid #FFDE86;
 }
+
+.device-md, .device-lg {
+  #services {
+    h3 {
+      color: #000;
+      text-shadow:0 2px 4px rgba(255, 255, 255, 0.5)
+    }
+  }
+}
