--- a/scss/dependencies/services.scss
+++ b/scss/dependencies/services.scss
@@ -47,7 +47,7 @@
 
 #services p {
   font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: #FFFFFF;
   line-height: 20px;
 }
@@ -224,7 +224,7 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
 
 .device-md, .device-lg {
   #services {
-    h3 {
+    p {
       color: #000;
       text-shadow:0 2px 4px rgba(255, 255, 255, 0.5)
     }
