--- a/scss/dependencies/navbar.scss
+++ b/scss/dependencies/navbar.scss
@@ -16,10 +16,12 @@
 }
 
 #header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo img, #logo img {
-    height:100px;
+    height:550px;
     position:fixed;
     top:35px;
     margin-left:30px;
+    top:-190px;
+    z-index:-1;
 }
 #header.sticky-header:not(.static-sticky), #header.sticky-header:not(.static-sticky) #header-wrap {
   height:100px;
