fix meet the doctors section text size

--- a/css/main.css
+++ b/css/main.css
@@ -26668,12 +26668,16 @@ textarea, .form-control {
   padding: 60px 0;
   background-image: url("../images/zandstra-bio.jpg");
   background-size: cover;
-  backround-position: 0% 0%; }
+  background-position: 10% 10%; }
+  @media (max-width: 1200px) {
+    #meet-the-doctor {
+      background-image: url("../images/zandstra-bio-bkgd-mobile.jpg"); } }
 
 #meet-the-doctor p {
-  font-size: 12px;
+  font-size: 16px;
   color: #312400;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  line-height: 24px; }
 
 #meet-the-doctor-mobile h2 {
   /* Dr. Estelle Zandstra: */
@@ -26724,6 +26728,9 @@ textarea, .form-control {
 
 .device-md #meet-the-doctor {
   background-position-x: 25%; }
+
+.device-xs #meet-the-doctor-mobile p, .device-xxs #meet-the-doctor-mobile p {
+  line-height: 26px !important; }
 
 #specials-below {
   border-top: 3px solid #FFE66B;
